--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body{
 header{
     width: 100vw;
     height: 100vh;
-    background-image: url('./img/header-bg.jpg');
+    background-image: url('./header-bg.jpg');
     background-position: bottom;
     background-size: cover;
     display: flex;
@@ -167,7 +167,7 @@ p{
 .explore{
     width: 100%;
     height: 100vh;
-    background-image: url(./img/bg2.jpg);
+    background-image: url(./bg2.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
