--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body{
 header{
     width: 100vw;
     height: 100vh;
-    background-image: url('./header-bg.jpg');
+    background-image: url('header-bg.jpg');
     background-position: bottom;
     background-size: cover;
     display: flex;
